[package]
name = "tetrs"
version = "0.0.3"
edition = "2021"
authors = ["Moritz Freyburger <moritz@freyburger.io>"]
license = "MIT"
description = "Command line Tetris written in Rust"
readme = "README.md"
homepage = "https://github.com/FreyMo/tetrs"
repository = "https://github.com/FreyMo/tetrs"
keywords = ["cli", "game", "tetris"]
categories = ["Games", "Command-line interface"]

[dependencies]
crossterm = "0.26.1"
rand = "0.8.5"
tui = "0.19.0"

[profile.release]
lto = true
strip = true

